# internal/server/grpc.go
@@ -3,7 +3,7 @@ package server
 import (
 	"time"
 
-	clusterv1alpha1 "github.com/f-rambo/ship/api/cluster/v1alpha1"
+	cloudv1alpha1 "github.com/f-rambo/ship/api/cloud/v1alpha1"
 	systemv1alpha1 "github.com/f-rambo/ship/api/system/v1alpha1"
 	"github.com/f-rambo/ship/internal/conf"
 	"github.com/f-rambo/ship/internal/interfaces"
@@ -13,7 +13,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, system *interfaces.SystemInterface, cluster *interfaces.ClusterInterface, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, system *interfaces.SystemInterface, cloud *interfaces.CloudInterface, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -29,7 +29,7 @@ func NewGRPCServer(c *conf.Server, system *interfaces.SystemInterface, cluster *
 		opts = append(opts, grpc.Timeout(time.Duration(c.GRPC.Timeout)*time.Second))
 	}
 	srv := grpc.NewServer(opts...)
-	clusterv1alpha1.RegisterClusterInterfaceServer(srv, cluster)
+	cloudv1alpha1.RegisterCloudInterfaceServer(srv, cloud)
 	systemv1alpha1.RegisterSystemInterfaceServer(srv, system)
 	return srv
 }
