# internal/server/http.go
@@ -3,7 +3,7 @@ package server
 import (
 	"time"
 
-	clusterv1alpha1 "github.com/f-rambo/ship/api/cluster/v1alpha1"
+	cloudv1alpha1 "github.com/f-rambo/ship/api/cloud/v1alpha1"
 	systemv1alpha1 "github.com/f-rambo/ship/api/system/v1alpha1"
 	"github.com/f-rambo/ship/internal/conf"
 	"github.com/f-rambo/ship/internal/interfaces"
@@ -13,7 +13,7 @@ import (
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, system *interfaces.SystemInterface, cluster *interfaces.ClusterInterface, logger log.Logger) *http.Server {
+func NewHTTPServer(c *conf.Server, system *interfaces.SystemInterface, cloud *interfaces.CloudInterface, logger log.Logger) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
@@ -29,7 +29,7 @@ func NewHTTPServer(c *conf.Server, system *interfaces.SystemInterface, cluster *
 		opts = append(opts, http.Timeout(time.Duration(c.GRPC.Timeout)*time.Second))
 	}
 	srv := http.NewServer(opts...)
-	clusterv1alpha1.RegisterClusterInterfaceHTTPServer(srv, cluster)
+	cloudv1alpha1.RegisterCloudInterfaceHTTPServer(srv, cloud)
 	systemv1alpha1.RegisterSystemInterfaceHTTPServer(srv, system)
 	return srv
 }
